--- a/register.html
+++ b/register.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Quick Chat</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style2.css">
+  <style type="text/css">
+      body{
+    background: url('bk.jpg');
+    background-size: cover;
+  }
+  </style>
 </head>
 
 <body> 
 <div class="container">
+  <div class="info">
+    <h1 style='color:grey;text-align: center;'>Quick Chat</h1>
+    <span style='color:grey;text-align:center;display: block;'>Made with <i class="fa fa-heart"></i> by <a href=# style='color:grey'>Sheng Xiao</a></span>
+  </div>
   <form>
     <div class="row">
       <h4>Account</h4>
@@ -73,6 +83,7 @@
     </div>
     <div class="row">
       <h4>Terms and Conditions</h4>
+      <h5><a href="#">Privacy terms & Conditions</a></h5>
       <div class="input-group">
         <input type="checkbox" id="terms"/>
         <label for="terms">I accept the terms and conditions for signing up to this service, and hereby confirm I have read the privacy policy.</label>
