--- a/findmypassword.html
+++ b/findmypassword.html
@@ -17,6 +17,10 @@
   color: #EF3B3A;
   text-decoration: none;
   }
+  body{
+    background: url('bk.jpg');
+    background-size: cover;
+  }
   </style>
 </head>
 
@@ -40,7 +44,7 @@
     <div class="input-group">
           <input type="button" name="sendcode" value="Send" id='sendcode' class='nextbutton'/>
     </div>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
+        <p class="message">Not registered? <a href="register.html">Create an account</a></p>
 
   </form>
 </div>
