--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   color: #EF3B3A;
   text-decoration: none;
   }
+  body{
+    background: url('bk.jpg');
+    background-size: cover;
+
+  }
   </style>
 </head>
 
@@ -44,7 +49,7 @@
     <div class="input-group">
           <input type="button" name="login" value="Log In" id='log-ip' class='nextbutton'/>
     </div>
-        <p class="message">Not registered? <a href="#">Create an account</a> <b style="color: black">/</b> Forget Password? <a href="#">Find my password</a></p>
+        <p class="message">Not registered? <a href="register.html">Create an account</a> <b style="color: black">/</b> Forget Password? <a href="findmypassword.html">Find my password</a></p>
 
   </form>
 </div>
