--- a/chatroom.html
+++ b/chatroom.html
@@ -325,7 +325,7 @@ i:hover{
       <div>
          <form style='height:12vh;background: red;position:absolute;bottom: 0px;z-index: 10;width: 100%'>
           <div class="form-group" >
-            <textarea  style='height:12vh;resize: none;display:inline-block;position: absolute;left:0px;width:90%;margin:0px;padding: 0px'></textarea>
+            <textarea  style='height:100%;resize: none;display:inline-block;position: absolute;left:0px;width:90%;margin:0px;padding: 0px'></textarea>
             <div class="input-group-btn" style="display: inline-block; background: green;position: absolute;width: 10%;height:12vh;position: absolute;z-index: 10;right: 0px">
               <button class="btn btn-default" type="submit" style="display: inline-block;width: 100%;height:12vh">
               <i class="fa fa-send-o" style="font-size:36px"></i>
