find password js/ missing password page

--- a/findmypassword.html
+++ b/findmypassword.html
@@ -5,6 +5,7 @@
   <title>Quick Chat</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/style2.css">
   <style type="text/css">
   .message {
@@ -21,6 +22,13 @@
     background: url('bk.jpg');
     background-size: cover;
   }
+  #kicon,#sendcode,#code{
+    display: none;
+  }
+  .ps,#confirm{
+    display: none;
+  }
+
   </style>
 </head>
 
@@ -33,23 +41,76 @@
   </div>
   <form>
     <div class="row">
-      <h1 style="text-align: center;">Find My Password</h1>
-      <p>Please enter you email to get a confirmation code:</p>
+      <h1 style="text-align: center;" id='title'>Find My Password</h1>
+      <p id='hint'>Please enter you email to get a confirmation code:</p>
        <div class="input-group input-group-icon">
-        <input type="email" placeholder="Email Adress"/>
-        <div class="input-icon"><i class="fa fa-envelope"></i></div>
+        <input type="email" placeholder="Email Adress" id='email'/>
+        <div class="input-icon" id='eicon'><i class="fa fa-envelope"></i></div>
+      </div>
+      <div class="input-group input-group-icon">
+        <input type="text" placeholder="Confirmation Code" id='code'/>
+        <div class="input-icon" id='kicon'><i class="fa fa-key"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon ps" >
+        <input type="password" placeholder="New Password" id='paswordnew'/>
+        <div class="input-icon"><i class="fa fa-key"></i></div>
+      </div>
+      <div class="input-group input-group-icon ps" >
+        <input type="Password" placeholder="Confirm Password" id='passwordconfirm'/>
+        <div class="input-icon"><i class="fa fa-key"></i></div>
       </div>
     </div>
     
     <div class="input-group">
+          <input type="button" name="sendemail" value="Send" id='sendemail' class='nextbutton'/>
           <input type="button" name="sendcode" value="Send" id='sendcode' class='nextbutton'/>
+          <input type="button" name="confirm" value="Confirm" id='confirm' class='nextbutton'/>
     </div>
         <p class="message">Not registered? <a href="register.html">Create an account</a></p>
 
   </form>
 </div>
-  
+  <script type="text/javascript">
+    var userid;
+    var code;
+    $('#sendemail').click(function(){
+      var email=$('#email').val();
+      $.ajax({
+        url:"findmypassword.php",
+        data:{'email':email},
+        dataType:"text",
+        success:function(data){
+          if($.isNumeric(data)){
+              userid=data;
+              $("#title").text("Enter Code");
+              $("#hint").text("Please enter your confirmation code in your email");
+              $("#email").hide();
+              $("#code").show();
+              $("#eicon").hide();
+              $("#kicon").show();
+              $("#sendemail").hide();
+              $("#sendcode").show();
+          }else{
+            alert(data);
+          }
+        },
+        type:'POST'
+      });
+    });
 
-
+    $('#sendcode').click(function(){
+      code=$('#code').val();
+      $.ajax({
+        url:"findmypassword.php",
+        data:{'userid':userid,},
+        dataType:'text',
+        success:function(){
+          //input two password and id to update database
+        },
+        type:"POST"
+      });
+    });
+  </script>
 </body>
 </html>
