change password UI developed

--- a/findmypassword.html
+++ b/findmypassword.html
@@ -28,7 +28,6 @@
   .ps,#confirm{
     display: none;
   }
-
   </style>
 </head>
 
@@ -59,6 +58,7 @@
       <div class="input-group input-group-icon ps" >
         <input type="Password" placeholder="Confirm Password" id='passwordconfirm'/>
         <div class="input-icon"><i class="fa fa-key"></i></div>
+        <p id='password_w' style="color: red;display: block;"><strong>Warning: </strong> Password does not match!</p>
       </div>
     </div>
     
@@ -107,9 +107,55 @@
         dataType:'text',
         success:function(){
           //input two password and id to update database
+          $('#code').hide();
+          $('.ps').show();
+          $('#sendcode').hide();
+          $("#confirm").show();
+          $('p').hide();
+          $('#title').text('Enter New Password');
+          //check if code correct
+
         },
         type:"POST"
       });
+    });
+
+    $("#passwordconfirm").change(function(){
+      var password_1=$('#paswordnew').val();
+      var password_2=$('#passwordconfirm').val();
+      if(password_1!=''&&password_1!=password_2){
+        $("#password_w").show();
+        $("#passwordconfirm").val("");
+      }
+      if(password_1!=''&&password_1==password_2){
+        $("#password_w").hide();
+      }
+    });
+    $("#passwordconfirm").click(function(){
+      $("#password_w").hide();
+    });
+    $("#paswordnew").change(function(){
+      var password_1=$('#paswordnew').val();
+      var password_2=$('#passwordconfirm').val();
+      if(password_2!=''&&password_1!=password_2){
+        $("#password_w").show();
+        $("#passwordconfirm").val("");
+      }
+      if(password_1!=''&&password_1==password_2){
+        $("#password_w").hide();
+      }
+    });
+    $("#passwordnew").click(function(){
+      $("#password_w").hide();
+    });
+    $("#confirm").click(function(){
+      var password_1=$('#paswordnew').val();
+      var password_2=$('#passwordconfirm').val();
+      if(password_1!=password_2){
+          $("#password_w").show();
+      }
+
+
     });
   </script>
 </body>
