implemneted sign out and signout all, start to work on change profile image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       dataType:'text',
       success: function(data){
         if(data==1){
-            $(location).attr('href','chatroom.html');
+            $(location).attr('href','chatroom.php');
         }else{
           alert(data);
         }
