add contact menu done

--- a/findmypassword.html
+++ b/findmypassword.html
@@ -103,7 +103,7 @@
       code=$('#code').val();
       $.ajax({
         url:"findmypassword.php",
-        data:{'userid':userid,},
+        data:{'userid':userid},
         dataType:'text',
         success:function(){
           //input two password and id to update database
@@ -154,8 +154,9 @@
       if(password_1!=password_2){
           $("#password_w").show();
       }
-
-
+      else{
+        //updata database
+      }
     });
   </script>
 </body>
