find password function success

--- a/findmypassword.html
+++ b/findmypassword.html
@@ -82,10 +82,14 @@
         data:{'email':email},
         dataType:"text",
         success:function(data){
-          if($.isNumeric(data)){
-              userid=data;
+          
+              var token=[];
+              token=data.split(",,");
+              userid=token[0];
+              if($.isNumeric(userid)){
+              alert(token[1]);
               $("#title").text("Enter Code");
-              $("#hint").text("Please enter your confirmation code in your email");
+              $("#hint").text("Please enter your confirmation code in 5 minutes");
               $("#email").hide();
               $("#code").show();
               $("#eicon").hide();
@@ -104,12 +108,12 @@
       code=$('#code').val();
       if(code!=''){
         $.ajax({
-        url:"findmypassword.php",
+        url:"findmypassword-code.php",
         data:{'userid':userid,'code':code},
         dataType:'text',
         success:function(data){
           //need to check if code correct && if code is used in less than 15 minus
-          if(data==1//need to control block in verify php){
+          if(data==1/*need to control block in verify php*/){
             $('#code').hide();
             $('.ps').show();
             $('#sendcode').hide();
@@ -117,8 +121,11 @@
             $('p').hide();
             $('#title').text('Enter New Password');
           }
+          else if(data>300){
+            alert('Verification code expired\nPlease get a new code');
+          }
           else{
-            alert('Invalid code');
+            alert(data);
           }
         },
         type:"POST"
@@ -167,11 +174,21 @@
       if(password_1!=password_2){
           $("#password_w").show();
       }
+      else if(password_1.length<6){
+          $("#password_w").html('<strong>Warning: </strong>Password character should more than 5');
+          $("#password_w").show();
+      }
       else{
         //updata database
         $.ajax({
-
-
+          url:'findmypassword-newpassword.php',
+          data:{'userid':userid,'password':password_1},
+          dataType:'text',
+          success:function(data){
+            alert(data);
+            $(location).attr('href','index.html');
+          },
+          type:'POST'
         });
       }
     });
