--- a/findmypassword.html
+++ b/findmypassword.html
@@ -21,7 +21,7 @@
   body{
     background: url('bk.jpg');
     background-size: cover;
-  }
+    background-repeat: no-repeat;  }
   #kicon,#sendcode,#code{
     display: none;
   }
