modified login process

--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
       dataType:'text',
       success: function(data){
         if(data==1){
-            $(location).attr('href','chatroom.php');
+            $(location).attr('href','index.php');
         }else{
           alert(data);
         }
