--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
     display: none;
   }
   </style>
-}
+
 </head>
 
 <body> 
@@ -112,7 +112,7 @@
     </div>
     <div class="row">
       <h4>Terms and Conditions</h4>
-      <h5><a href="#">Privacy terms & Conditions</a></h5>
+      <h5><a href="consent.pdf" >Privacy terms & Conditions</a></h5>
       <div class="input-group">
         <input type="checkbox" id="terms"/>
         <label for="terms">I accept the terms and conditions for signing up to this service, and hereby confirm I have read the privacy policy.</label>
