--- a/findmypassword.html
+++ b/findmypassword.html
@@ -186,7 +186,7 @@
           dataType:'text',
           success:function(data){
             alert(data);
-            $(location).attr('href','index.html');
+            $(location).attr('href','index.php');
           },
           type:'POST'
         });
