--- a/register.html
+++ b/register.html
@@ -10,9 +10,11 @@
   <link rel="stylesheet" href="css/style2.css">
   <style type="text/css">
   body{
-    background: url('bk.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+      background: url('bk.jpg');
+      background-size: cover;
+  	  background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
   }
   input::-webkit-contacts-auto-fill-button {
   visibility: hidden;
