--- a/findmypassword.html
+++ b/findmypassword.html
@@ -15,13 +15,16 @@
   text-align: center;
   }
   .message a {
-  color: #EF3B3A;
-  text-decoration: none;
+  	color: #EF3B3A;
+  	  text-decoration: none;
   }
   body{
     background: url('bk.jpg');
     background-size: cover;
-    background-repeat: no-repeat;  }
+  	background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
   #kicon,#sendcode,#code{
     display: none;
   }
