--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quick Chat</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
@@ -18,21 +19,12 @@
   color: #EF3B3A;
   text-decoration: none;
   }
-  body{
-    background: url('bk.jpg');
-    background-size: cover;
-	background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-	
-  }
-  
   </style>
 </head>
 
 <body> 
 
-<div class="container-login">
+<div class="container-login" >
    <div class="info">
     <h1 style='color:grey;text-align: center;'>Quick Chat</h1>
     <span style='color:grey;text-align:center;display: block;'>Made with <i class="fa fa-heart"></i> by <a href=# style='color:grey'>Sheng Xiao</a></span>
