--- a/register.html
+++ b/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quick Chat</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
@@ -9,13 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style2.css">
   <style type="text/css">
-  body{
-      background: url('bk.jpg');
-      background-size: cover;
-  	  background-position: center center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-  }
   input::-webkit-contacts-auto-fill-button {
   visibility: hidden;
   display: none !important;
